--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <script src="./chapter/core/12.prototype.js" defer></script>
+  <script src="./chapter/core/19.arrayType.js" defer></script>
   <script src="./main.js"></script>
   <title>범쌤과 함께하는 자바스크립트</title>
 </head>
 
 <body>
   <h1>
+
+    <button>button</button>
     <span class="first">hello</span>
     <!-- 주석입니다. -->
     <span class="second">javascript</span>
