class, css, insert 유틸함수 생성 / 스터디

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <script src="./lib/dom/attr.js"></script>
   <script src="./lib/dom/getNode.js"></script>
-  <script src="./chapter/dom/05.manipulation.js" defer></script>
+  <script src="./lib/dom/attr.js"></script>
+  <script src="./lib/dom/insert.js"></script>
+  <script src="./lib/dom/css.js"></script>
+  <script src="./chapter/dom/06.style.js" defer></script>
   <!-- <script src="./main.js"></script> -->
   <title>범쌤과 함께하는 자바스크립트</title>
 </head>
@@ -19,6 +21,11 @@
     data-tab-index="1">hello</span>
     <span class="second">javascript</span>
   </h1>
+
+  <ul class="todo">
+
+  </ul>
+
 
 </body>
 
