--- a/client/index.html
+++ b/client/index.html
@@ -8,24 +8,33 @@
   <script src="./lib/dom/getNode.js"></script>
   <script src="./lib/dom/attr.js"></script>
   <script src="./lib/dom/insert.js"></script>
+  <script src="./lib/dom/bindEvent.js"></script>
   <script src="./lib/dom/css.js"></script>
-  <script src="./chapter/dom/06.style.js" defer></script>
+  <script src="./chapter/dom/09.delegation.js" defer></script>
   <!-- <script src="./main.js"></script> -->
   <title>범쌤과 함께하는 자바스크립트</title>
 </head>
 
 <body>
 
-  <h1>
-    <span class="first" id="message" data-size="10"
-    data-tab-index="1">hello</span>
-    <span class="second">javascript</span>
-  </h1>
+  <!-- <div class="ground">
+    <img src="https://en.js.cx/clipart/ball.svg" alt="축구공" id="ball">
+  </div> -->
 
-  <ul class="todo">
+  <!-- <section>
+    section
+    <article>
+      article
+      <p>p</p>
+    </article>
+  </section> -->
 
-  </ul>
-
+  <div class="container">
+    <button type="button" class="a" data-name="A">a</button>
+    <button type="button" class="b" data-name="B">b</button>
+    <button type="button" class="c" data-name="C">c</button>
+    <button type="button" class="d" data-name="D">d</button>
+  </div>
 
 </body>
 
